
[package]
name = "merchant-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique IDs for checkout sessions
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP middleware (CORS, logging)
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
async-trait = "0.1"
thiserror = "2"

# Phase 3: x402 payment handler
reqwest = { version = "0.12", features = ["json"] }

base64 = "0.22"

[dev-dependencies]
axum-test = "17"
